added an observer skeleton and excluded the msg and action files in a seperate dir 'msgs_and_action'

--- a/msgs_and_action/CMakeLists.txt
+++ b/msgs_and_action/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(action_vision)
+project(msgs_and_action)
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11")
 find_package(catkin REQUIRED COMPONENTS
   roscpp
@@ -14,11 +14,12 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 add_message_files(
+  DIRECTORY msg
 )
 
 add_action_files(
   DIRECTORY action
-  FILES msg_template.action
+  FILES observer.action
 )
 
 generate_messages(
@@ -31,27 +32,5 @@ catkin_package(
   CATKIN_DEPENDS 
   actionlib_msgs
   message_runtime
-)
-
-include_directories(
-  include
-  ${catkin_INCLUDE_DIRS}
-)
-
-add_executable(template_ASRV
-  src/templates/template_ASRV.cpp
-  include/templates/template_ASRV.h
-)
-
-target_link_libraries(template_ASRV
-  ${catkin_LIBRARIES}
-)
-
-add_executable(template_ACL
-  src/templates/template_ACL.cpp
-)
-
-target_link_libraries(template_ACL
-  ${catkin_LIBRARIES}
 )
 
